--- a/style.css
+++ b/style.css
@@ -71,9 +71,10 @@ h3 {
 
 img {
     
-    width: 150px;
-    height: 150px;
-    max-height: 100%;
+    width: 100%;
+    height: 100%;
+    max-height: 150px;
+    max-width: 150px;
     border: 2px solid black;
     padding: 5%;
 }
@@ -82,7 +83,8 @@ img {
     display: flex;
     align-items: center;
     justify-content: center;
-    font-size: larger;
+    /* font-size: larger;
+    font-size: 100%; */
     
 }
 
@@ -90,14 +92,22 @@ img {
     margin-right: 70px;
 }
 
+.text {
+    font-size: 100%;
+    
+    
+    
+}
+
 .player .value {
     text-align: center;
-    font-size: xx-large;
+    font-size: 25px;
 }
 
 .PC .value {
     text-align: center;
-    font-size: xx-large;
+    font-size: 25px;
+    /* font-size: 100%; */
 }
 
 .value {
@@ -113,6 +123,7 @@ img {
     text-align: center;
     margin: 15px 0px;
     font-size: larger;
+    font-size: 100%;
     font-weight: 800;
 }
 
@@ -128,7 +139,8 @@ img {
     width: 100%;
     background-color: black;        /* fallback color, in case browser can't load bottom backgrnd color */
     background-color: rgba(0,0,0,0.4);  /* color with opacity, lower opacity number means higher transparency */
-}
+    /* transition: 2s ease-in-out;  ne valja ovo jos */
+    }
 
 
 .modal-content {
@@ -137,6 +149,7 @@ img {
     padding: 20px;
     width:fit-content;
     min-width: 10%;
+    transition: 1s ease-in-out;
 }
 
 .modal-text {
