--- a/style.css
+++ b/style.css
@@ -8,12 +8,22 @@ p.play_game {
     text-align: center;
 }
 
-h1 {
+.title {
+    
+    width: 100%;
+
+}
+.h1 {
+    font-size: 28px;
+    font-weight: 900;
     text-align: center;
     color: yellow;
+    margin-bottom: 30px;
 }
 
-h3 {
+.h3 {
+    font-size: 20px;
+    font-weight: 600;
     text-align: center;
     color: yellowgreen;
 }
@@ -75,6 +85,8 @@ img {
     height: 100%;
     max-height: 150px;
     max-width: 150px;
+    min-width: 80px;
+    min-height: 80px;
     border: 2px solid black;
     padding: 5%;
 }
